--- a/package.json
+++ b/package.json
@@ -7,5 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "@biddster",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cron": "^1.1.0",
+    "moment": "^2.11.2",
+    "suncalc": "^1.7.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "lodash": "^4.6.1"
+  },
+  "node-red": {
+    "nodes": {
+      "schedex": "index.js"
+    }
+  }
 }
