--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "cron": "^1.1.0",
+    "lodash": "^4.6.1",
     "moment": "^2.11.2",
     "suncalc": "^1.7.0"
   },
