--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-schedex",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,13 @@
   },
   "author": "@biddster",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/biddster/node-red-contrib-schedex.git"
+  },
+  "bugs": {
+    "url": "https://github.com/biddster/node-red-contrib-schedex/issues"
+  },
   "dependencies": {
     "cron": "^1.1.0",
     "lodash": "^4.6.1",
