--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "node-red-contrib-schedex",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "",
   "main": "index.js",
-  "keywords": [ "node-red", "router", "switch", "time" ],
+  "keywords": ["node-red", "schedule", "scheduler", "timer", "sun events"],
   "scripts": {
     "test": "mocha -R spec ./tests/test.js"
   },
