--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sun events"
   ],
   "scripts": {
-    "test": "mocha -R spec ./tests/test.js"
+    "test": "node_modules/.bin/mocha -R spec ./tests/test.js",
+    "readme2html": "node_modules/.bin/markdown README.md -f gfm"
   },
   "author": "@biddster",
   "license": "MIT",
@@ -29,6 +30,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "markdown-to-html": "0.0.13",
+    "mocha": "^3.1.2",
     "node-red-contrib-mock-node": "^0.2.0"
   },
   "node-red": {
