--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-schedex",
-  "version": "0.8.0",
+  "version": "0.9.0-d",
   "description": "",
   "main": "index.js",
   "keywords": [
