--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "sun events"
   ],
   "scripts": {
-    "test": "node_modules/.bin/mocha -R spec ./tests/test.js",
+    "test": "nyc --reporter=html node_modules/.bin/mocha -R spec ./tests/test.js",
     "readme2html": "node_modules/.bin/markdown README.md -f gfm"
   },
   "author": "@biddster",
@@ -32,7 +32,8 @@
     "chai": "^3.5.0",
     "markdown-to-html": "0.0.13",
     "mocha": "^3.1.2",
-    "node-red-contrib-mock-node": "^0.2.0"
+    "node-red-contrib-mock-node": "^0.2.0",
+    "nyc": "^10.3.2"
   },
   "node-red": {
     "nodes": {
