--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.19.0",
     "markdown-to-html": "0.0.13",
     "mocha": "^3.1.2",
     "node-red-contrib-mock-node": "^0.2.0",
