--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "markdown-to-html": "0.0.13",
         "mocha": "^3.4.2",
         "node-red-contrib-mock-node": "^0.3.0",
-        "nyc": "^11.0.2"
+        "nyc": "^11.0.2",
+        "prettier": "^1.9.1"
     },
     "node-red": {
         "nodes": {
