#22 Initial scribble and on or off times being optional.

--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
         "singleQuote": true,
         "tabWidth": 4,
         "printWidth": 96
+    },
+    "nyc": {
+        "exclude": "tests/**"
     }
 }
