#22 Routine package update.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
     "version": "1.2.1",
     "description": "",
     "main": "index.js",
-    "keywords": ["node-red", "schedule", "scheduler", "timer", "sun events"],
+    "keywords": [
+        "node-red",
+        "schedule",
+        "scheduler",
+        "timer",
+        "sun events"
+    ],
     "scripts": {
         "test": "nyc --reporter=html node_modules/.bin/mocha -R spec ./tests/test.js",
         "readme2html": "node_modules/.bin/markdown README.md -f gfm"
@@ -19,20 +25,20 @@
     },
     "dependencies": {
         "lodash": "^4.17.10",
-        "moment": "^2.22.1",
+        "moment": "^2.22.2",
         "suncalc": "^1.8.0"
     },
     "devDependencies": {
         "chai": "^4.1.2",
-        "eslint": "^4.19.1",
+        "eslint": "^5.5.0",
         "eslint-config-biddster": "^0.6.0",
-        "eslint-config-prettier": "^2.9.0",
+        "eslint-config-prettier": "^3.0.1",
         "markdown-to-html": "0.0.13",
-        "mocha": "^5.1.1",
+        "mocha": "^5.2.0",
         "node-red-contrib-mock-node": "^0.4.0",
         "nsp": "^3.2.1",
-        "nyc": "^11.8.0",
-        "prettier": "^1.12.1"
+        "nyc": "^13.0.1",
+        "prettier": "^1.14.2"
     },
     "node-red": {
         "nodes": {
@@ -45,7 +51,10 @@
             "node": true,
             "mocha": true
         },
-        "extends": ["eslint-config-biddster/es6-node", "prettier"]
+        "extends": [
+            "eslint-config-biddster/es6-node",
+            "prettier"
+        ]
     },
     "prettier": {
         "singleQuote": true,
