--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
     "name": "node-red-contrib-schedex",
-    "version": "1.2.1",
+    "version": "1.3.0-alpha.1",
     "description": "",
     "main": "index.js",
-    "keywords": [
-        "node-red",
-        "schedule",
-        "scheduler",
-        "timer",
-        "sun events"
-    ],
+    "keywords": ["node-red", "schedule", "scheduler", "timer", "sun events"],
     "scripts": {
         "test": "nyc --reporter=html node_modules/.bin/mocha -R spec ./tests/test.js",
         "readme2html": "node_modules/.bin/markdown README.md -f gfm"
@@ -51,10 +45,7 @@
             "node": true,
             "mocha": true
         },
-        "extends": [
-            "eslint-config-biddster/es6-node",
-            "prettier"
-        ]
+        "extends": ["eslint-config-biddster/es6-node", "prettier"]
     },
     "prettier": {
         "singleQuote": true,
