--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
     "name": "node-red-contrib-schedex",
-    "version": "1.3.0-alpha.2",
+    "version": "1.3.0-alpha.3",
     "description": "",
     "main": "index.js",
-    "keywords": ["node-red", "schedule", "scheduler", "timer", "sun events"],
+    "keywords": [
+        "node-red",
+        "schedule",
+        "scheduler",
+        "timer",
+        "sun events"
+    ],
     "scripts": {
         "test": "nyc --reporter=html node_modules/.bin/mocha -R spec ./tests/test.js",
         "readme2html": "node_modules/.bin/markdown README.md -f gfm"
@@ -18,21 +24,21 @@
         "url": "https://github.com/biddster/node-red-contrib-schedex/issues"
     },
     "dependencies": {
-        "lodash": "^4.17.10",
+        "lodash": "^4.17.11",
         "moment": "^2.22.2",
         "suncalc": "^1.8.0"
     },
     "devDependencies": {
-        "chai": "^4.1.2",
-        "eslint": "^5.5.0",
+        "chai": "^4.2.0",
+        "eslint": "^5.7.0",
         "eslint-config-biddster": "^0.6.0",
-        "eslint-config-prettier": "^3.0.1",
+        "eslint-config-prettier": "^3.1.0",
         "markdown-to-html": "0.0.13",
         "mocha": "^5.2.0",
         "node-red-contrib-mock-node": "^0.4.0",
         "nsp": "^3.2.1",
-        "nyc": "^13.0.1",
-        "prettier": "^1.14.2"
+        "nyc": "^13.1.0",
+        "prettier": "^1.14.3"
     },
     "node-red": {
         "nodes": {
@@ -45,7 +51,10 @@
             "node": true,
             "mocha": true
         },
-        "extends": ["eslint-config-biddster/es6-node", "prettier"]
+        "extends": [
+            "eslint-config-biddster/es6-node",
+            "prettier"
+        ]
     },
     "prettier": {
         "singleQuote": true,
